changed css for newgame and edited player2 value in sql-db

--- a/production/css/styles.css
+++ b/production/css/styles.css
@@ -20,11 +20,11 @@
 }
 
 .spieler1 {
-    background-color: green;
+    background-color: red;
 }
 
 .spieler2 {
-    background-color: blue;
+    background-color: yellow;
 }
 
 .yellow {
