--- a/production/css/styles.css
+++ b/production/css/styles.css
@@ -4,13 +4,28 @@
     padding-left: 3%;
 }
 
+html {
+    background: url(../bilder/wallpaper.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+body {
+    background-color: rgba(0,0,0,0);
+}
+
+.container {
+    background: whitesmoke;
+    border-radius: 10px;
+}
+
 .disclaimer {
     font-size: medium;
     background-color: #7ABA7A;
     color: #B76EB8;
     text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
     height: 100px;
     vertical-align: middle;
 }
@@ -29,6 +44,15 @@
 }
 
 #lobbyheader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #7ABA7A;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+#accountheader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
