--- a/production/css/styles.css
+++ b/production/css/styles.css
@@ -32,6 +32,12 @@ body {
 
 #registrierungscontainer {
     margin-bottom: 4%;
+    padding-bottom: 1%;
+}
+
+#logincontainer {
+    margin-bottom: 4%;
+    padding-bottom: 1%;
 }
 
 #gameheader {
@@ -70,7 +76,7 @@ body {
 }
 
 #lobbycontent {
-    margin-left: 3%;
+    margin-left: 25%;
 }
 
 #gamerelevantcontent {
@@ -105,6 +111,17 @@ body {
     background-color: #7ABA7A;
     padding-left: 3%;
     padding-right: 3%;
+    width: 30%;
+}
+
+.changemessages {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: whitesmoke;
+    padding-left: 3%;
+    padding-right: 3%;
+    height: 5%;
 }
 
 .spieler1 {
@@ -144,7 +161,6 @@ body {
     object-fit: contain;
 }
 
-#userdatacontainer {
-    display: flex;
-    flex-direction: row;
+#userdata {
+
 }
