--- a/production/css/styles.css
+++ b/production/css/styles.css
@@ -96,7 +96,7 @@ body {
 
 #gamecontainer td {
     border: solid ;
-    border-color: blue;
+    border-color: darkblue;
     border-radius: 100%;
     width: 100px;
     height: 100px;
@@ -122,6 +122,10 @@ body {
     padding-left: 3%;
     padding-right: 3%;
     height: 5%;
+}
+
+#playground table {
+    background-color: darkblue;
 }
 
 .spieler1 {
